migrated the project to poetry

--- a/.github/workflows/addcom_ci.yml
+++ b/.github/workflows/addcom_ci.yml
@@ -21,7 +21,9 @@ jobs:
         
     - name: Build the tool
       run: |
-        pip install .
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
   
     - name: Test with pytest
       run: |
