--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,31 @@
+[tool.poetry]
+name = "addcom"
+version = "1.0.4"
+description = "a CLI tool for adding comments to your source code files"
+authors = ["Arina Kolodeznikova <arinak1017@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/arilloid/addcom"
+packages = [{include = "app"}]
+
+
+[tool.poetry.dependencies]
+python = "^3.12"
+typer = "^0.12"
+openai = "^1.46"
+rich = "^13.8"
+typing_extensions = "^4.12"
+
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.10"
+ruff = "^0.7"
+pytest = "^8.3"
+pytest-mock = "^3.14"
+
+[tool.poetry.scripts]
+addcom = 'app.main:app'
+
 # Black - source code formatter configurations
 [tool.black]
 line-length = 90
@@ -10,3 +38,8 @@ extend-exclude = '''
 [tool.ruff]
 # 'extend-exclude' excludes files or directories in addition to the defaults
 extend-exclude = ["examples"]
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
