--- a/.github/workflows/addcom_ci.yml
+++ b/.github/workflows/addcom_ci.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: "3.12"
         
-    - name: Build the tool
+    - name: Set up the tool
       run: |
         python -m pip install --upgrade pip
         pip install poetry
@@ -27,5 +27,4 @@ jobs:
   
     - name: Test with pytest
       run: |
-        pip install pytest pytest-mock
-        pytest
+        poetry run pytest
